# TrainingApp

./: Jenkinsfile  alembic.ini  my_database.db  pyproject.toml
alembic/: env.py
alembic/versions/: e123ed792956_initial_migration.py
my_project/: database.py  main.py  models.py  my_database.db  test.db
